jasper/force-app/main/default/objects/Feedback_Question__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <label>Form Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Purchase Experience</fullName>
            </value>
            <value>
                <fullName>Overall Experience</fullName>
            </value>
            <value>
                <fullName>Service Feedback</fullName>
            </value>
            <value>
                <fullName>Product Review</fullName>
            </value>
            <value>
                <fullName>PSF</fullName>
            </value>
            <value>
                <fullName>PSF Questionnaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>