jasper/force-app/main/default/objects/Feedback_Question__c/fields/Is_Rating_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Rating_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Rating_Question</label>
    <type>Checkbox</type>
</CustomField>