jasper/force-app/main/default/objects/Feedback_Question__c/fields/Question_Options__c.field-meta.xml
<CustomField>
    <fullName>Question_Options__c</fullName>
    <label>Question Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>