jasper/force-app/main/default/objects/Feedback_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Name__c</columns>
    <columns>Question_Options__c</columns>
    <columns>Rating__c</columns>
    <columns>Question_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>