jasper/force-app/main/default/objects/Feedback_Question__c/listViews/PSF_Feedback_Questions.listView-meta.xml
<ListView>
    <fullName>PSF_Feedback_Questions</fullName>
    <columns>Question__c</columns>
    <columns>Form_Name__c</columns>
    <columns>Question_Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Form_Name__c</field>
        <operation>equals</operation>
        <value>PSF Questionnaire</value>
    </filters>
    <label>PSF Feedback Questions</label>
</ListView>